# x6100_control

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  CMakeLists.txt  Makefile  README.md  test_atu.c  test_flow.c  test_ptt.c  test_vfo.c  x6100_control.c  x6100_control.h  x6100_flow.c  x6100_flow.h  x6100_server.cpp  x6100_server_rpc.cpp
aetherx6100ctrl/: CMakeLists.txt
aetherx6100ctrl/include/: CMakeLists.txt
aetherx6100ctrl/include/aether_x6100/control/: CMakeLists.txt  control.h  flow.h  gpio.h
aetherx6100ctrl/src/: CMakeLists.txt  control.c  flow.c  gpio.c
cmake/: default_visibility.cmake  developer_mode.cmake  install_structure.cmake  output_structure.cmake
cmake/compiler_flags/: cxx_iso_flags.cmake  cxx_standard.cmake  fast_math.cmake  ipo_support.cmake
cmake/dependencies/: openmp.cmake
lib/: CMakeLists.txt  x6100_control.c  x6100_control.h  x6100_flow.c  x6100_flow.h  x6100_gpio.c  x6100_gpio.h
server/: CMakeLists.txt  set_vfo.sh  x6100_server.cpp  x6100_server.h  x6100_server_rpc.cpp
test/: CMakeLists.txt  atu.c  flow.c  ptt.c  test_atu.c  test_flow.c  test_ptt.c  test_vfo.c  vfo.c
